# cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake  Warnings.cmake
configured/: config.hpp.in
docs/: Doxyfile
src/my_lib/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main.cc
